Create IN_MEMORY environment variable and change order of env variable resolution to industry standard